--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -1,5 +1,5 @@
 ---
-const { title = 'Jeanine White: Personal Site', description = 'The personal site of Jeanine White' } = Astro.props;
+const { title = 'Oliver Cederborg - Front-end Developer', description = 'Personal site of Oliver Cederborg' } = Astro.props;
 ---
 
 <meta charset="UTF-8" />
@@ -8,6 +8,6 @@ const { title = 'Jeanine White: Personal Site', description = 'The personal site
 <title>{title}</title>
 
 <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-<link rel="stylesheet" type="text/css" href={Astro.resolve('../styles/global.scss')} />
+<link rel="stylesheet" type="text/css" href={Astro.resolve('../styles/tailwind.css')} />
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700;900&display=swap" rel="stylesheet" />
