--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -1,5 +1,6 @@
 ---
-const { title = 'Oliver Cederborg - Front-end Developer', description = 'Personal site of Oliver Cederborg' } = Astro.props;
+const { title = 'Oliver Cederborg - Front-end Developer', description = 'Personal site of Oliver Cederborg' } =
+	Astro.props
 ---
 
 <meta charset="UTF-8" />
@@ -10,4 +11,4 @@ const { title = 'Oliver Cederborg - Front-end Developer', description = 'Persona
 <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 <link rel="stylesheet" type="text/css" href={Astro.resolve('../styles/tailwind.css')} />
 <link rel="preconnect" href="https://fonts.gstatic.com" />
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700;900&display=swap" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css2?family=Syne:wght@200;400;700;800;900&display=swap" rel="stylesheet" />
