--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -16,21 +16,7 @@ const projects = Astro.fetchContent<MarkdownFrontmatter>('./project/**/*.md')
 <html lang="en">
 	<head>
 		<MainHead title="All Projects | Jeanine White" description="Learn about Jenine White's most recent projects" />
-		<style lang="scss">
-			.grid {
-				display: grid;
-				grid-gap: 3rem;
-			}
-		</style>
+
 	</head>
-	<body>
-		<Nav />
-		<div class="wrapper">
-			<h1 class="title mt4 mb4">All Projects</h1>
-			<div class="grid">
-				{projects.map((project) => <PortfolioPreview project={project} />)}
-			</div>
-		</div>
-		<Footer />
-	</body>
+	<body></body>
 </html>
