fix: add empty style tag

--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -12,3 +12,7 @@ const { title = 'Oliver Cederborg - Front-end Developer', description = 'Persona
 <link rel="stylesheet" type="text/css" href={Astro.resolve('../styles/tailwind.css')} />
 <link rel="preconnect" href="https://fonts.gstatic.com" />
 <link href="https://fonts.googleapis.com/css2?family=Syne:wght@200;400;700;800;900&display=swap" rel="stylesheet" />
+
+<style global>
+
+</style>
