feat: update Nav

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Projects from '../components/Projects.astro'
 		<MainHead />
 	</head>
 	<body class="bg-primary-dark text-white font-syne">
-		<Nav />
+		<Nav client:load />
 
 		<header class="container flex flex-col justify-center py-64 px-4">
 			<article>
