--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import Projects from '../components/Projects.astro'
 			</article>
 			<a
 				href="#projects"
-				class="uppercase hover:translate-x-4 transition-transform duration-150 font-semibold text-4xl mt-32"
+				class="uppercase hover:translate-x-4 transition-transform duration-150 font-semibold text-4xl mt-32 ease-in-out"
 				>See my projects <span class="ml-6">&rarr;</span></a
 			>
 		</header>
