feat: add About section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import MainHead from '../components/MainHead.astro'
 import Nav from '../components/Nav.svelte'
-import Projects from '../components/Projects.astro'
+import About from '../components/About.astro'
 ---
 
 <html lang="en" class="scroll-smooth scroll-p-28">
@@ -31,6 +31,6 @@ import Projects from '../components/Projects.astro'
 			>
 		</header>
 
-		<Projects />
+				<About />
 	</body>
 </html>
