--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,11 @@
 ---
 import MainHead from '../components/MainHead.astro'
 import Nav from '../components/Nav.svelte'
+import Projects from '../components/Projects.svelte'
 import About from '../components/About.astro'
+const fetchedProjects = Astro.fetchContent('/src/pages/project/**/*.md')
+	.filter(({ publishDate }) => !!publishDate)
+	.sort((a, b) => new Date(b.publishDate).valueOf() - new Date(a.publishDate).valueOf())
 ---
 
 <html lang="en" class="scroll-smooth scroll-p-28">
@@ -31,6 +35,7 @@ import About from '../components/About.astro'
 			>
 		</header>
 
+				<Projects projects={fetchedProjects} />
 				<About />
 	</body>
 </html>
