feat: update about

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,8 +1,8 @@
 <section id="about" class="md:flex-row container flex flex-col-reverse gap-32 px-4 lg:py-32 py-16 mb-32">
 	<article class="md:w-2/4">
-		<p class="text-primary-brand text-xl font-semibold uppercase">Who am I</p>
+		<p class="text-primary-brand text-xl font-semibold uppercase">About</p>
 		<h2 class="uppercase md:text-4xl lg:text-5xl font-extrabold mt-6 text-3xl break-words !leading-[1.25]">
-			About me
+			Who am I
 		</h2>
 		<p class="text-2xl text-stone-400 mt-10">
 			Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint velit dolorem magni veritatis recusandae
