--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Nav from '../components/Nav.svelte'
 import Hero from '../components/Hero.astro'
 import Projects from '../components/Projects.svelte'
 import About from '../components/About.astro'
+import Contact from '../components/Contact.astro'
 import { ScrollSpy, ScrollableSection } from '@beyonk/svelte-scrollspy'
 
 const fetchedProjects = Astro.fetchContent('/src/pages/project/**/*.md')
@@ -28,6 +29,8 @@ const fetchedProjects = Astro.fetchContent('/src/pages/project/**/*.md')
 			<ScrollableSection client:load id="about">
 				<About />
 			</ScrollableSection>
+
+			<Contact />
 		</ScrollSpy>
 	</body>
 </html>
