fix: contact form

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -17,7 +17,7 @@ import ContactForm from './ContactForm.svelte'
 			</p>
 		</section>
 		<section class="w-1/2">
-			<ContactForm client:visible />
+			<ContactForm client:load />
 		</section>
 	</div>
 </section>
